# ngrammatic

./: Cargo.toml
benches/: benchmark.rs
