[package]
name = "ngrammatic"
version = "0.3.4"
authors = ["Will Page <compenguy@gmail.com>"]
description = "Character-oriented ngram generator and fuzzy matching library."
homepage = "https://github.com/compenguy/ngrammatic"
repository = "https://github.com/compenguy/ngrammatic"
documentation = "https://docs.rs/ngrammatic"
readme = "README.md"
categories = ["text-processing"]
keywords = ["fuzzy", "ngrams", "shingles"]
license = "MIT"
edition = "2021"

[lib]
name = "ngrammatic"

[dependencies]

[dev-dependencies]
criterion = "0.3"
cargo-criterion = "1.1.0"
rand = "0.8.4"
rand_pcg = "0.3.1"

[[bench]]
name = "benchmark"
harness = false
